--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,9 +1,8 @@
 .map-container {
-  position: absolute;
   height: 100vh;
   width: 100vw;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+}
+
+.adress-bar {
+  width: 100vw;
 }
